assets/main.css
@font-face {
    font-family: Hobo;
    src: url(hobo.ttf);
}

* {
    box-sizing: border-box;

    font-family: Hobo, "Courier New", Courier, monospace;
    text-rendering: geometricPrecision; /*ensure the text is properly pixelated*/
    color: white;
}

body {
    margin: 0;
    padding: 0;
    
    width: 100%;
    height: 100%;

    background-color: #111;
}

/*

General elements styling

*/

/* Make anchor targetted elements appear vertically below navbar*/
:target::before {
    content:"";
    display:block;
    z-index: -100;

    height:15vh;
    margin:-15vh 0 0;
}

h2 {
    padding-left: 10px;
}

p {
    padding-left: 15px;
}

a {
    color: white;
    text-decoration: underline;
}
a:hover, a:visited:hover  {
    color: lightgray;
}
a:visited {
    color: white;
}

div, img {
    image-rendering: pixelated; /* Keep pixel art sharp */
}

a.nolink {
    text-decoration: none;
}
a:hover, a:visited:hover  {
    color: white;
}
a:visited {
    color: white;
}

code {
    margin: 1px;
    padding: 2px;
    display: inline-block;
    border-radius: 3px;

    background-color: #333;
}

/*

Layout elements styling

*/

#title {
    margin: 0 auto;
    padding: 5px 0;

    text-align: center;

    font-size: 3rem;
}

#title img {
    width: 48px;
    height: auto;

    position: relative;
    top: 3px;
}

#title span {
    font-size: 1rem;
}


nav {
    width: 100%;
    border: 1px solid #222;

    display: block;

    position: sticky;
    top: 0;

    background-color: #111;

    z-index: 200;
}

nav::after {
    content:"";
    display: table;
    clear: both;
}


nav a {
    width: 50%;
    height: 7vh;

    border: 1px solid #222;

    float: left;

    font-size: 1.5rem;
    text-decoration: none;

    text-align: center;
    line-height: 7vh;
}

nav a:hover, nav a:visited:hover {
    color: white;
}

nav a:hover, nav a.active {
    border-bottom: 3px solid #333;
}

nav a:visited {
    color: white;
}



#main {
    margin: 30px auto;
    padding: 20px;

    width: 100%;
    max-width: 1000px;
}



@media only screen and (min-width: 700px) {
    #title {    
        font-size: 4rem;
    }
    #title span {
        font-size: 1.5rem;
    }

    nav a {
        width: 25%;
    }

    /* Make anchor targetted elements appear vertically below navbar*/
    :target::before {
        height:8vh; /* fixed header height*/
        margin:-8vh 0 0; /* negative fixed header height */
    }
}

